Fix scrollbar issue

--- a/themes/OpenPsa2/static/ui-elements.css
+++ b/themes/OpenPsa2/static/ui-elements.css
@@ -278,7 +278,7 @@ form.datamanager2 .form fieldset.fieldset
     background: -moz-linear-gradient(top, #FFFFFF 0%, #F9F9F9 32%, #F9F9F8 96%, #FCFCFC 100%);
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#FFFFFF), color-stop(32%,#F9F9F9), color-stop(96%,#F9F9F8), color-stop(100%,#FCFCFC));
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#FFFFFF', endColorstr='#FCFCFC',GradientType=0 ); /* ie */
-    display: table-row-group;
+    display: table-cell;
 }
 
 form.datamanager2 .form fieldset.fieldset:hover
